--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Rohan Tuli <rohann.tulii@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rohantuli7"
+    "url": "https://github.com/rohantuli7/rohantuli7.github.io"
   },
   "keywords": [
     "gatsby"
